# codeheck

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FURTHER_IMPROVEMENTS.md  RESTRUCTURE_SUMMARY.md  codeheck.tar  outputfile.sql  readme.md  schema.sql  users.rs
api_server/: Cargo.toml  run.sh  stop.sh
api_server/entity/: mod.rs  submissions.rs
api_server/migration/src/: m20250729_165841_problems.rs  m20250729_204136_contest_registrations.rs
api_server/src/: app.rs  error.rs  main.rs  routes.rs
api_server/src/contest/: add_contest_problem.rs  add_contest_problems.rs  create_contest.rs  create_registration.rs  delete_contest_problems.rs  delete_registration.rs  dto.rs  mod.rs  retrieve_contest.rs  retrieve_contest_problems.rs  retrieve_contests.rs  retrieve_leaderboard.rs
api_server/src/problem/: create_problem.rs  create_testcases.rs  dto.rs  mod.rs  retrieve_problem.rs  retrieve_problems.rs  update_ispublic.rs
api_server/src/submission/: create_submission.rs  mod.rs  retrieve_submission.rs  retrieve_submissions.rs  update_submission.rs
api_server/src/user/: mod.rs  refresh.rs  retrieve_user.rs  retrieve_user_info.rs  signin.rs  signup.rs
api_server/src/utils/: app_state.rs  authenticator.rs  config.rs  logger.rs  middlewares.rs  mod.rs  security.rs  shutdown.rs
api_server/worker/: Cargo.toml
api_server/worker/src/: docker.rs  main.rs  queue.rs
backend/: Cargo.toml
backend/entity/: prelude.rs
backend/src/: app.rs  main.rs
backend/src/contest/: add_contest_problem.rs  retrieve_contest_submissions.rs
backend/src/problem/: retrieve_problem.rs  retrieve_problems.rs
backend/src/submission/: create_submission.rs  mod.rs
backend/src/user/: mod.rs
backend/src/utils/: app_state.rs  config.rs  hashing.rs  jwt.rs
entity/: contest_problems.rs  contest_registrations.rs  problems.rs  submissions.rs  users.rs
frontend/: index.html  package-lock.json  package.json
frontend/docs/: index.html
frontend/docs/assets/: index-Bqy3NOwM.css  index-CdoxxF7b.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/admin/: create_contest.tsx  create_problem.tsx  dashboard.tsx  edit_contest.tsx  edit_problem.tsx
frontend/src/components/: navbar.tsx  pagination.tsx  view_contests.tsx  view_problems.tsx  view_submissions.tsx
frontend/src/contests/: contest.tsx  contests.tsx
frontend/src/problems/: problem.tsx  problems.tsx
frontend/src/profile/: ProfileOverview.tsx  ProfileSolved.tsx  ProfileSubmissions.tsx  profile.tsx
frontend/src/user/: signin.tsx  signup.tsx
frontend/src/utils/: helpers.tsx  storage.ts
frontend/src/utils/contexts/: authcontext.tsx  protected.tsx
migration/src/: lib.rs  m20250729_154307_users.rs  m20250729_165841_problems.rs  m20250729_194923_testcases.rs  m20250729_201113_contests.rs  m20250729_202337_submissions.rs  m20250729_202925_contest_problems.rs  m20250729_204136_contest_registrations.rs
src/: app.rs  dto.rs  error.rs  main.rs  routes.rs
src/contest/: add_contest_problem.rs  create_contest.rs  create_register.rs  delete_register.rs  dto.rs  mod.rs  retrieve_contest.rs  retrieve_contest_problems.rs  retrieve_contest_submissions.rs  retrieve_contest_user_submissions.rs  retrieve_contests.rs
src/entity/: contest_problems.rs  contest_registrations.rs  contests.rs  problems.rs  submissions.rs  testcases.rs  users.rs
src/problem/: create_problem.rs  create_testcase.rs  create_testcases.rs  dto.rs  mod.rs  retrieve_problem.rs  retrieve_problems.rs  retrieve_user_problems.rs  update_ispublic.rs
src/submission/: create_submission.rs  dto.rs  mod.rs  retrieve_submission.rs  retrieve_submissions.rs
src/user/: auth_router.rs  dto.rs  login.rs  mod.rs  refresh_access_token.rs  retrieve_user.rs  retrieve_user_contests.rs  retrieve_user_created_problems.rs  retrieve_user_info.rs  retrieve_user_problems.rs  retrieve_user_solved.rs  retrieve_user_solved_problems.rs  retrieve_user_submissions.rs  signin.rs  signout.rs  signup.rs
src/utils/: app_state.rs  config.rs  jwt.rs  logger.rs  middlewares.rs  mod.rs
worker/: .dockerignore  Cargo.toml  Dockerfile.gcc-rebuilt  Dockerfile.openjdk-rebuilt
worker/src/: build_images.rs  docker.rs  handle.rs  language.rs  languages.rs  main.rs  models.rs  queue.rs  run.rs  types.rs
worker/src/compilers/: Dockerfile.openjdk-rebuilt
worker_old/: Cargo.toml
worker_old/src/: config.rs  handle.rs  languages.rs  run.rs
