[package]
name = "codeheck"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1


[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = [] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = { version = "0.5.2", features = [] }
tower-http = { version = "0.6.6", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

sea-orm = { version = "1.0.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

chrono = "0.4.41"
dotenvy = "0.15"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
