
[workspace]
members = ["backend", "migration", "worker"]
resolver = "3"

[workspace.dependencies]
tokio = "1.47.1"
axum = "0.8.4"
axum-extra = "0.10.1"
tower = "0.5.2"
tower-http = "0.6.6"
tower-cookies = "0.11.0"

serde = "1.0.219"
serde_json = "1.0.143"

sea-orm = "1.1.14"

chrono = "0.4.41"
dotenvy = "0.15.7"
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"

lapin = "3.6.0"
