[package]
name = "codeheck"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration", "worker"]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lapin = "3.6.0"
sea-orm = { version = "1.1.16", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["full"] }
