[package]
name = "codeheck"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration", "worker"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
bcrypt = "0.17.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
lapin = "3.7.0"
sea-orm = { version = "1.1.16", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
