[package]
name = "api_server"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bcrypt = "0.18.0"
chrono = "0.4.43"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lapin = { version = "3.7.2", features = ["rustls--ring"]}
rustls = { version = "0.23.36", features = ["ring"] }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["full"] }
# tracing = "0.1.44"
# tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
# uuid = { version = "1.18.1", features = ["v4", "serde"] }
# validator = { version = "0.20.0", features = ["derive"] }
