[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true , features = ["full"] }
axum = { workspace = true , features = ["macros"] }
axum-extra = { workspace = true , features = ["typed-header"] }
tower = { workspace = true , features = [] }
tower-http = { workspace = true , features = ["full"] }
tower-cookies = {workspace = true}

serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true }

sea-orm = { workspace = true , features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

chrono = {workspace = true }
dotenvy = {workspace = true }
bcrypt = {workspace = true }
jsonwebtoken = {workspace = true }

lapin = {workspace = true }
