[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
futures-util = "0.3.31"
lapin = { version = "3.7.2", features = ["rustls--ring"]}
num_cpus = "1.17.0"
reqwest = { version = "0.13.1", features = ["json"] }
rustls = { version = "0.23.36", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
# tracing = "0.1.44"
# tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
